# Storeshelf_estimation_GraknAI

./: README.md
grakn_KB/: data.gql  query.gql  schema.gql
graknrosservice/: CMakeLists.txt  package.xml
graknrosservice/scripts/: graknrosserver.py
graknrosservice/srv/: Graknquery.srv
